hosts ressources /swagger => EpisodeController and Auth
