# app/Http/Controllers/HostController.php
@@ -2,63 +2,83 @@
 
 namespace App\Http\Controllers;
 
+use App\Http\Requests\RegisterRequest;
 use Illuminate\Http\Request;
+use App\Models\User;
 
 class HostController extends Controller
 {
-    /**
-     * Display a listing of the resource.
-     */
     public function index()
     {
-        //
+        try {
+        $hosts = User::where('role', 'animateur')->get();
+        return response()->json($hosts);
+        } catch (\Exception $e) {
+            return [
+                'error' => $e->getMessage()
+            ];
+        }
     }
 
-    /**
-     * Show the form for creating a new resource.
-     */
-    public function create()
+    public function store(RegisterRequest $request)
     {
-        //
+        try {
+
+        $data = $request->validated();
+        $data['role'] = 'animateur';
+        $host = User::create($data);
+
+        return [
+            'message' => 'Animateur créé avec succès',
+            'host' => $host,
+        ];
+
+        } catch (\Exception $e) {
+            return [
+                'error' => $e->getMessage()
+            ];
+        }
     }
 
-    /**
-     * Store a newly created resource in storage.
-     */
-    public function store(Request $request)
+    public function update(Request $request, User $host)
     {
-        //
+        try {
+            $data = $request->validate([
+                'name' => 'sometimes|string|max:255',
+                'email' => 'sometimes|email|unique:users,email,',
+                'password' => 'nullable|min:6|confirmed',
+            ]);
+
+
+            $host->update($data);
+
+            return response()->json([
+                'message' => 'Animateur mis à jour avec succès',
+                'host' => $host,
+            ]);
+        } catch (\Exception $e) {
+            return [
+                'error' => $e->getMessage()
+            ];
+        }
     }
 
-    /**
-     * Display the specified resource.
-     */
-    public function show(string $id)
+    public function show(User $host)
     {
-        //
+        try {
+            return $host;
+        } catch (\Exception $e) {
+            return [
+                'error' => $e->getMessage()
+            ];
+        }
     }
 
-    /**
-     * Show the form for editing the specified resource.
-     */
-    public function edit(string $id)
-    {
-        //
-    }
 
-    /**
-     * Update the specified resource in storage.
-     */
-    public function update(Request $request, string $id)
+    public function destroy(User $host)
     {
-        //
-    }
+        $host->delete();
 
-    /**
-     * Remove the specified resource from storage.
-     */
-    public function destroy(string $id)
-    {
-        //
+        return response()->json(['message' => 'Animateur supprimé avec succès']);
     }
 }
