# app/Models/User.php
@@ -41,6 +41,7 @@ class User extends Authenticatable
      */
     protected $casts = [
         'email_verified_at' => 'datetime',
+        'password'=> 'hashed'
     ];
     public function podcasts()
     {
